Hard Crash Opening Blender File With Library Overrides #107913

Closed
opened 2023-05-13 21:28:07 +02:00 by Seth · 18 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-14 19:50, hash: 1ad4f67d7802

NOTE: not 100% sure about this:

Short description of error
Blender hard crashes loading blend file '1701A-FiringForward'.

Exact steps for others to reproduce the error

  • Download and extract attached files,
  • Go to .\TrekProject\Scenes and open 1701A-FiringForward.blend.

I suspect that library overrides are the issue, as I'm linking quite a bit and the blend file has two ancestors, one with the ship, one with the base scene.

Uploaded to OneDrive for now: https://1drv.ms/u/s!An9SjZwRpNLmg50Vsn1BM2EmrrDbTg?e=9nrANr
See the third post for why.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-14 19:50, hash: `1ad4f67d7802` NOTE: not 100% sure about this: - first there was a fix between good 27e2b32a06 and bad 8703db393b - then this broke again between good 07ae1feed2 and bad ca2c0da79e **Short description of error** Blender hard crashes loading blend file '1701A-FiringForward'. **Exact steps for others to reproduce the error** - Download and extract attached files, - Go to `.\TrekProject\Scenes` and open `1701A-FiringForward.blend`. I suspect that library overrides are the issue, as I'm linking quite a bit and the blend file has two ancestors, one with the ship, one with the base scene. Uploaded to OneDrive for now: [https://1drv.ms/u/s!An9SjZwRpNLmg50Vsn1BM2EmrrDbTg?e=9nrANr](https://1drv.ms/u/s!An9SjZwRpNLmg50Vsn1BM2EmrrDbTg?e=9nrANr) See the third post for why.
Seth added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-13 21:28:08 +02:00

Hello, can you attach file?

Hello, can you attach file?
Author

Apparently there's a bug with that too? It is under 500MB.
image

I'm uploading it to my OneDrive for now.

Apparently there's a bug with that too? It is under 500MB. ![image](/attachments/8309f24c-5970-4e22-b7f4-75287f19b877) I'm uploading it to my OneDrive for now.

Can you try to attach .blend file?

Can you try to attach .blend file?
Author

Updated the first post with a download link.

I can't attach a blend file, the issue concerns a group of files with library overrides so I need to share an archive.

Updated the first post with a download link. I can't attach a blend file, the issue concerns a group of files with library overrides so I need to share an archive.
Author

I can confirm that the single .blend file loads properly in isolation. (without the blend files it links to)
With them, it crashes 100% of the time.

I can confirm that the single .blend file loads properly in isolation. (without the blend files it links to) With them, it crashes 100% of the time.

I reproduced this bug in the latest official release, but not the latest daily build, so it appears the bug has been fixed already.

Please try the latest daily build: https://builder.blender.org/download/

However, I noticed several warnings like:

WARN (bke.liboverride): D:\BlenderDev\blender\source\blender\blenkernel\intern\lib_override.cc:3113 lib_override_library_main_resync_on_library_indirect_level: Deleting unused ID override MEMesh.003 from library level 1, still found as needing resync, and being isolated from its hierarchy root. This can happen when its otherwise unchanged linked reference was moved around in the library file (e.g. if an object was moved into another sub-collection of the same hierarchy).

And I also noticed several errors like:

ERROR (bke.lib_id): D:\BlenderDev\blender\source\blender\blenkernel\intern\lib_id.c:334 id_us_min: ID user decrement error: OBball_glow (from '[Main]'): 0 <= 0

I'm not sure what they means (@mont29 is this something to be concerned about?)

I reproduced this bug in the latest official release, but not the latest daily build, so it appears the bug has been fixed already. Please try the latest daily build: https://builder.blender.org/download/ However, I noticed several warnings like: ``` WARN (bke.liboverride): D:\BlenderDev\blender\source\blender\blenkernel\intern\lib_override.cc:3113 lib_override_library_main_resync_on_library_indirect_level: Deleting unused ID override MEMesh.003 from library level 1, still found as needing resync, and being isolated from its hierarchy root. This can happen when its otherwise unchanged linked reference was moved around in the library file (e.g. if an object was moved into another sub-collection of the same hierarchy). ``` And I also noticed several errors like: ``` ERROR (bke.lib_id): D:\BlenderDev\blender\source\blender\blenkernel\intern\lib_id.c:334 id_us_min: ID user decrement error: OBball_glow (from '[Main]'): 0 <= 0 ``` I'm not sure what they means (@mont29 is this something to be concerned about?)
Germano Cavalcante added
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-05-15 22:39:45 +02:00

Warning is fine, just (potentially) important debug info for the user since it's deleting some data (CLOG_INFO is not displayed by default in the console, so have to use CLOG_WARN instead when you want to be sure its printed in the console).

Error about ID user count I would not know, would not consider it important enough to investigate half a Gb of data though. While ideally this should never happen, it's usually not critical issue either.

Warning is fine, just (potentially) important debug info for the user since it's deleting some data (CLOG_INFO is not displayed by default in the console, so have to use CLOG_WARN instead when you want to be sure its printed in the console). Error about ID user count I would not know, would not consider it important enough to investigate half a Gb of data though. While ideally this should never happen, it's usually not critical issue either.

OK, closing then.
Thanks for the feedback.
@VirtusH, as Blender 3.5.1 no longer receives bug fixes, I feel the solution is to use version 3.6 in development for now.

OK, closing then. Thanks for the feedback. @VirtusH, as Blender 3.5.1 no longer receives bug fixes, I feel the solution is to use version 3.6 in development for now.
Blender Bot added
Status
Archived
and removed
Status
Needs Info from Developers
labels 2023-05-16 14:55:32 +02:00
Author

I'm not sure if I'm missing something, but I still can't load the file with the 3.6 Alpha build from today.

I'm not sure if I'm missing something, but I still can't load the file with the 3.6 Alpha build from today.
Seth reopened this issue 2023-05-17 23:40:08 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-05-17 23:40:10 +02:00

@VirtusH, the OneDrive file is apparently no longer available
And it's hard to say why the crash only happens to you on 3.6.
Maybe debug logs can help us understand what's going on.
Therefore, please open the installation directory of Blender 3.6 and double click on the blender_debug_gpu.cmd. This will start Blender in debug mode and create log files.
Try to reproduce the error again.
Once it crashes, the Windows Explorer should open and show you up to two files, a debug log and the system information.
Add them to your bug report by clicking on the upload button below or via drag and drop.
Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

@VirtusH, the OneDrive file is apparently no longer available And it's hard to say why the crash only happens to you on 3.6. Maybe debug logs can help us understand what's going on. Therefore, please open the installation directory of Blender 3.6 and double click on the `blender_debug_gpu.cmd`. This will start Blender in debug mode and create log files. Try to reproduce the error again. Once it crashes, the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer).
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-05-18 15:55:42 +02:00
Author

Onedrive link still works for me.

Onedrive link still works for me.
Germano Cavalcante added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2023-05-18 19:49:42 +02:00
Member

So, I can confirm the crash.
I think there is something wrong with a linked scene and overridden camera.

First, I think this can be stripped down considerably (will do)
Then I will need to check if I can repro from scratch (I recall a similar report, lets see if I can find it)

So, I can confirm the crash. I think there is something wrong with a linked scene and overridden camera. First, I think this can be stripped down considerably (will do) Then I will need to check if I can repro from scratch (I recall a similar report, lets see if I can find it)
Member

3.4.1 was bad 3.5.0 and 3.5.1 seem fine for me? Then broke again it seems:

Stripping the file down is really fragile (removing stuff will crash versions again that were previously working...).

So, without stripping it down [which I might look into again], I will still confirm (since I can reliably repro crashes in 3.6 and 4.0)

3.4.1 was bad 3.5.0 and 3.5.1 seem fine for me? Then broke again it seems: - first there was a fix between good 27e2b32a0619 and bad 8703db393bfb - then this broke again between good 07ae1feed2b9 and bad ca2c0da79eeb Stripping the file down is really fragile (removing stuff will crash versions again that were previously working...). So, without stripping it down [which I might look into again], I will still confirm (since I can reliably repro crashes in 3.6 and 4.0)
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-22 14:40:10 +02:00
Philipp Oeser added the
Interest
Overrides
Module
Pipeline, Assets & IO
labels 2023-05-22 14:42:47 +02:00

Files crash on read-after-freed memory error here with 3.6 debug ASAN build...

But it seems to be fairly badly corrupted, getting these asserts before the crash, which should never ever be triggered:

BLI_assert failed: source/blender/blenkernel/intern/collection.c:215, collection_owner_pointer_get(), at '(id->tag & LIB_TAG_NO_MAIN) == 0'
BLI_assert failed: source/blender/blenkernel/intern/collection.c:215, collection_owner_pointer_get(), at '(id->tag & LIB_TAG_NO_MAIN) == 0'
BLI_assert failed: source/blender/blenkernel/intern/layer.cc:1324, BKE_layer_collection_sync(), at 'first_layer_collection->collection == scene->master_collection'
  ViewLayer's first layer collection should always be the one for the scene's master collection
BLI_assert failed: source/blender/blenkernel/intern/layer.cc:1324, BKE_layer_collection_sync(), at 'first_layer_collection->collection == scene->master_collection'
  ViewLayer's first layer collection should always be the one for the scene's master collection

So unless we know how such corruption was generated, am afraid we cannot do much here.

Files crash on read-after-freed memory error here with 3.6 debug ASAN build... But it seems to be fairly badly corrupted, getting these asserts before the crash, which should never ever be triggered: ``` BLI_assert failed: source/blender/blenkernel/intern/collection.c:215, collection_owner_pointer_get(), at '(id->tag & LIB_TAG_NO_MAIN) == 0' BLI_assert failed: source/blender/blenkernel/intern/collection.c:215, collection_owner_pointer_get(), at '(id->tag & LIB_TAG_NO_MAIN) == 0' BLI_assert failed: source/blender/blenkernel/intern/layer.cc:1324, BKE_layer_collection_sync(), at 'first_layer_collection->collection == scene->master_collection' ViewLayer's first layer collection should always be the one for the scene's master collection BLI_assert failed: source/blender/blenkernel/intern/layer.cc:1324, BKE_layer_collection_sync(), at 'first_layer_collection->collection == scene->master_collection' ViewLayer's first layer collection should always be the one for the scene's master collection ``` So unless we know how such corruption was generated, am afraid we cannot do much here.

Oooooh.... you are linking and overriding a whole scene here.

This is not really supported currently, looking if I can understand the root of the issue though.

Oooooh.... you are linking and overriding a whole scene here. This is not really supported currently, looking if I can understand the root of the issue though.
Author

Well I can suggest a workaround for anyone else who encounters this issue at least.
Linking and overriding collections works fine so far for me, and then you can link 'world's separately. I guess rendering settings wouldn't carry over, but that's a minor inconvenience.

This also begs the question why library overrides function on scenes, if they're not intended to be supported. I will definitely avoid doing that from now on.

Well I can suggest a workaround for anyone else who encounters this issue at least. Linking and overriding collections works fine so far for me, and then you can link 'world's separately. I guess rendering settings wouldn't carry over, but that's a minor inconvenience. This also begs the question why library overrides function on scenes, if they're not intended to be supported. I will definitely avoid doing that from now on.
Member

Oooooh.... you are linking and overriding a whole scene here.

This is not really supported currently, looking if I can understand the root of the issue though.

Shift clicking here properly disallows an override
image

However, you could still add an override like this:

  • go the Blender File view in the Outliner
  • expand the library file, go to scenes
  • use the context menu on the scene there (Library Override > Make > ...)
    image

This puts us in a weird state already, should probably be prevented as well?

> Oooooh.... you are linking and overriding a whole scene here. > > This is not really supported currently, looking if I can understand the root of the issue though. Shift clicking here properly disallows an override ![image](/attachments/edd60850-e62d-4b91-a35f-3203ea4f1524) However, you could still add an override like this: - go the Blender File view in the Outliner - expand the library file, go to scenes - use the context menu on the scene there (Library Override > Make > ...) ![image](/attachments/799ad1ca-826a-4de0-b73b-526244671cd0) This puts us in a weird state already, should probably be prevented as well?

Yes will disable it from the Outliner too indeed... Scenes as overrides is experimental at best, there are a lot worms in this can before it can be considered as fully working.

Still trying to address some of the issues with this file though, the complex dynamics between collection hierarchies and view layers are making it very hard to tame.

Yes will disable it from the Outliner too indeed... Scenes as overrides is experimental at best, there are a lot worms in this can before it can be considered as fully working. Still trying to address some of the issues with this file though, the complex dynamics between collection hierarchies and view layers are making it very hard to tame.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-24 18:14:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107913
No description provided.